docs/0.14/_sources/api/gammapy.astro.population.Paczynski1990.rst.txt
Paczynski1990
=============

.. currentmodule:: gammapy.astro.population

.. autoclass:: Paczynski1990
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Paczynski1990.amplitude
      ~Paczynski1990.bounding_box
      ~Paczynski1990.bounds
      ~Paczynski1990.col_fit_deriv
      ~Paczynski1990.eqcons
      ~Paczynski1990.evolved
      ~Paczynski1990.fit_deriv
      ~Paczynski1990.fittable
      ~Paczynski1990.fixed
      ~Paczynski1990.has_user_bounding_box
      ~Paczynski1990.has_user_inverse
      ~Paczynski1990.ineqcons
      ~Paczynski1990.input_units
      ~Paczynski1990.input_units_allow_dimensionless
      ~Paczynski1990.input_units_equivalencies
      ~Paczynski1990.input_units_strict
      ~Paczynski1990.inputs
      ~Paczynski1990.inverse
      ~Paczynski1990.linear
      ~Paczynski1990.meta
      ~Paczynski1990.model_constraints
      ~Paczynski1990.model_set_axis
      ~Paczynski1990.n_inputs
      ~Paczynski1990.n_outputs
      ~Paczynski1990.name
      ~Paczynski1990.outputs
      ~Paczynski1990.param_names
      ~Paczynski1990.param_sets
      ~Paczynski1990.parameter_constraints
      ~Paczynski1990.parameters
      ~Paczynski1990.r_exp
      ~Paczynski1990.return_units
      ~Paczynski1990.separable
      ~Paczynski1990.standard_broadcasting
      ~Paczynski1990.tied
      ~Paczynski1990.uses_quantity

   .. rubric:: Methods Summary

   .. autosummary::

      ~Paczynski1990.__call__
      ~Paczynski1990.copy
      ~Paczynski1990.deepcopy
      ~Paczynski1990.evaluate
      ~Paczynski1990.n_submodels
      ~Paczynski1990.prepare_inputs
      ~Paczynski1990.prepare_outputs
      ~Paczynski1990.rename
      ~Paczynski1990.render
      ~Paczynski1990.strip_units_from_tree
      ~Paczynski1990.sum_of_implicit_terms
      ~Paczynski1990.with_units_from_data
      ~Paczynski1990.without_units_for_data

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: bounding_box
   .. autoattribute:: bounds
   .. autoattribute:: col_fit_deriv
   .. autoattribute:: eqcons
   .. autoattribute:: evolved
   .. autoattribute:: fit_deriv
   .. autoattribute:: fittable
   .. autoattribute:: fixed
   .. autoattribute:: has_user_bounding_box
   .. autoattribute:: has_user_inverse
   .. autoattribute:: ineqcons
   .. autoattribute:: input_units
   .. autoattribute:: input_units_allow_dimensionless
   .. autoattribute:: input_units_equivalencies
   .. autoattribute:: input_units_strict
   .. autoattribute:: inputs
   .. autoattribute:: inverse
   .. autoattribute:: linear
   .. autoattribute:: meta
   .. autoattribute:: model_constraints
   .. autoattribute:: model_set_axis
   .. autoattribute:: n_inputs
   .. autoattribute:: n_outputs
   .. autoattribute:: name
   .. autoattribute:: outputs
   .. autoattribute:: param_names
   .. autoattribute:: param_sets
   .. autoattribute:: parameter_constraints
   .. autoattribute:: parameters
   .. autoattribute:: r_exp
   .. autoattribute:: return_units
   .. autoattribute:: separable
   .. autoattribute:: standard_broadcasting
   .. autoattribute:: tied
   .. autoattribute:: uses_quantity

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: deepcopy
   .. automethod:: evaluate
   .. automethod:: n_submodels
   .. automethod:: prepare_inputs
   .. automethod:: prepare_outputs
   .. automethod:: rename
   .. automethod:: render
   .. automethod:: strip_units_from_tree
   .. automethod:: sum_of_implicit_terms
   .. automethod:: with_units_from_data
   .. automethod:: without_units_for_data
